--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{"AOCCVV":56,"ZKSDMZ":4}'}
+  properties: {col_widths: '{"AOCCVV":56,"ZKSDMZ":4,"XIYVIE":15,"OBIKHH":45,"KWEOTU":15,"MRXCQK":45,"ZSMDIJ":15,"ASBQMH":45,"TDMPES":14,"LGZGHR":46}'}
 components:
 - type: Spacer
   properties: {height: 32}
@@ -45,16 +45,107 @@ components:
   name: label_4
   layout_properties: {grid_position: 'TAUXSS,AOCCVV HCQWNR,KWEOTU'}
 - type: DropDown
-  properties: {}
+  properties:
+    role: null
+    align: full
+    tooltip: ''
+    placeholder: ''
+    border: ''
+    enabled: true
+    foreground: ''
+    items: [bar, line, area, rect, circle, point, square, tick, rule]
+    visible: true
+    font_size: null
+    font: ''
+    spacing_above: small
+    spacing_below: small
+    italic: false
+    background: ''
+    bold: false
+    underline: false
+    include_placeholder: false
   name: drop_down_2
   layout_properties: {grid_position: 'TAUXSS,AOCCVV HCQWNR,MRXCQK'}
+  event_bindings: {}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: 'encoding channels:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    text: 'channels:', font_size: null, font: '', spacing_above: small, icon_align: left,
     spacing_below: small, italic: true, background: '', bold: false, underline: false,
     icon: ''}
   name: label_2
   layout_properties: {grid_position: 'TAUXSS,AOCCVV TLDBOV,XIYVIE'}
+- type: FlowPanel
+  properties: {}
+  name: flow_panel_channels
+  layout_properties: {grid_position: 'TAUXSS,AOCCVV TLDBOV,OBIKHH'}
+  event_bindings: {}
+  components:
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: x, font_size: null, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: false, checked: false,
+      underline: false}
+    name: check_box_x
+    layout_properties: {grid_position: 'BXGUAY,KHMMBI'}
+    event_bindings: {change: channel_check_changed}
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: y, font_size: null, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: false, checked: false,
+      underline: false}
+    name: check_box_y
+    layout_properties: {grid_position: 'BVVXJI,HCVMBN'}
+    event_bindings: {change: channel_check_changed}
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: color, font_size: null, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: false, checked: false,
+      underline: false}
+    name: check_box_color
+    layout_properties:
+      col_widths: {}
+      grid_position: NDUAEK,JVZEVE
+    event_bindings: {change: channel_check_changed}
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: text, font_size: null, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: false, checked: false,
+      underline: false}
+    name: check_box_text
+    layout_properties:
+      col_widths: {}
+      grid_position: SDGPCS,BSACTN
+    event_bindings: {change: channel_check_changed}
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: row, font_size: null, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: false, checked: false,
+      underline: false}
+    name: check_box_row
+    layout_properties:
+      col_widths: {}
+      grid_position: DEZARX,FQVJHD
+    event_bindings: {change: channel_check_changed}
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: column, font_size: null, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: false, checked: false,
+      underline: false}
+    name: check_box_column
+    layout_properties:
+      col_widths: {}
+      grid_position: JXYXXV,YQTTLI
+    event_bindings: {change: channel_check_changed}
+  - type: CheckBox
+    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: tooltip, font_size: null, font: '', spacing_above: small,
+      spacing_below: small, italic: false, background: '', bold: false, checked: false,
+      underline: false}
+    name: check_box_tooltip
+    layout_properties:
+      col_widths: {}
+      grid_position: XBLNUZ,IZSKEB
+    event_bindings: {change: channel_check_changed}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
     text: '', font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
@@ -62,71 +153,43 @@ components:
   name: label_id
   layout_properties: {grid_position: 'TAUXSS,ZKSDMZ'}
   event_bindings: {}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'properties:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_3
+  layout_properties: {grid_position: 'XHCFSC,TDMPES'}
 - type: FlowPanel
-  properties: {}
-  name: flow_panel_1
-  layout_properties: {grid_position: 'WSFRLP,WTPPJU'}
-  event_bindings: {}
+  properties: {role: null, spacing: medium, align: center, tooltip: '', border: '',
+    foreground: '', visible: true, spacing_above: small, spacing_below: small, background: ''}
+  name: flow_panel_properties
+  layout_properties: {grid_position: 'XHCFSC,LGZGHR'}
   components:
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      spacing_below: small, italic: false, background: '', bold: false, checked: false,
-      underline: false}
-    name: check_box_1
-    layout_properties: {grid_position: 'BXGUAY,KHMMBI'}
-    event_bindings: {}
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      spacing_below: small, italic: false, background: '', bold: false, checked: false,
-      underline: false}
-    name: check_box_2
-    layout_properties: {grid_position: 'BVVXJI,HCVMBN'}
-    event_bindings: {}
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      spacing_below: small, italic: false, background: '', bold: false, checked: false,
-      underline: false}
-    name: check_box_2_copy
+  - type: Button
+    properties: {role: raised, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: Chart, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: primary_color_1_copy
     layout_properties:
       col_widths: {}
-      grid_position: NDUAEK,JVZEVE
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      spacing_below: small, italic: false, background: '', bold: false, checked: false,
-      underline: false}
-    name: check_box_2_copy_2
+      grid_position: HOBRYC,RKDSAL
+    event_bindings: {click: chart_but_click}
+  - type: Button
+    properties: {role: raised, align: center, tooltip: '', border: '', enabled: true,
+      foreground: '', visible: true, text: mark, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: primary_color_1_copy_2
     layout_properties:
       col_widths: {}
-      grid_position: SDGPCS,BSACTN
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      spacing_below: small, italic: false, background: '', bold: false, checked: false,
-      underline: false}
-    name: check_box_2_copy_3
-    layout_properties:
-      col_widths: {}
-      grid_position: DEZARX,FQVJHD
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      spacing_below: small, italic: false, background: '', bold: false, checked: false,
-      underline: false}
-    name: check_box_2_copy_4
-    layout_properties:
-      col_widths: {}
-      grid_position: JXYXXV,YQTTLI
-  - type: CheckBox
-    properties: {role: null, align: left, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: small,
-      spacing_below: small, italic: false, background: '', bold: false, checked: false,
-      underline: false}
-    name: check_box_2_copy_5
-    layout_properties:
-      col_widths: {}
-      grid_position: XBLNUZ,IZSKEB
+      grid_position: ERPMUD,ICYOAD
+    event_bindings: {click: mark_but_click}
+  event_bindings: {}
+- type: ColumnPanel
+  properties: {}
+  name: column_panel
+  layout_properties: {grid_position: 'ZFROSO,LZQRFR'}
+  event_bindings: {}
 is_package: true
