--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -161,7 +161,7 @@ components:
   name: label_3
   layout_properties: {grid_position: 'XHCFSC,TDMPES'}
 - type: FlowPanel
-  properties: {role: null, spacing: medium, align: center, tooltip: '', border: '',
+  properties: {role: null, spacing: medium, align: left, tooltip: '', border: '',
     foreground: '', visible: true, spacing_above: small, spacing_below: small, background: ''}
   name: flow_panel_properties
   layout_properties: {grid_position: 'XHCFSC,LGZGHR'}
