--- a/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
+++ b/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
@@ -1,5 +1,10 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-components: []
+  properties: {col_widths: '{}'}
+components:
+- type: Label
+  properties: {}
+  name: label_1
+  layout_properties: {grid_position: 'NEBTFX,CJEDOA'}
 is_package: true
