--- a/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
+++ b/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
@@ -16,13 +16,16 @@ components:
   layout_properties: {grid_position: 'NEBTFX,ZTZCHO'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: 'title_fontsize:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    text: 'title fontsize:', font_size: null, font: '', spacing_above: small, icon_align: left,
     spacing_below: small, italic: true, background: '', bold: false, underline: false,
     icon: ''}
   name: label_2
   layout_properties: {grid_position: 'STQLRZ,QZMTHO'}
 - type: TextBox
-  properties: {}
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: '',
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+    font: '', spacing_above: small, type: number, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
   name: text_box_2
   layout_properties: {grid_position: 'STQLRZ,JJOMGU'}
 is_package: true
