--- a/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
+++ b/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{"CJEDOA":15,"ZTZCHO":45,"QZMTHO":15,"JJOMGU":45}'}
+  properties: {col_widths: '{"CJEDOA":15,"ZTZCHO":45,"QZMTHO":15,"JJOMGU":45,"XKIEJY":15,"ZORWQV":45}'}
 components:
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
@@ -29,7 +29,18 @@ components:
   name: text_box_2
   layout_properties: {grid_position: 'STQLRZ,JJOMGU'}
 - type: Label
-  properties: {}
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'format:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
   name: label_3
   layout_properties: {grid_position: 'JPEJJY,XKIEJY'}
+- type: TextBox
+  properties: {}
+  name: text_box_3
+  layout_properties: {grid_position: 'JPEJJY,ZORWQV'}
+- type: Label
+  properties: {}
+  name: label_4
+  layout_properties: {grid_position: 'SBWQDS,FLQAYK'}
 is_package: true
