--- a/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
+++ b/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{"CJEDOA":15,"ZTZCHO":45,"QZMTHO":15,"JJOMGU":45,"XKIEJY":15,"ZORWQV":45}'}
+  properties: {col_widths: '{"CJEDOA":15,"ZTZCHO":45,"QZMTHO":15,"JJOMGU":45,"XKIEJY":15,"ZORWQV":45,"FLQAYK":15,"JVCWVN":45}'}
 components:
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
@@ -40,7 +40,23 @@ components:
   name: text_box_3
   layout_properties: {grid_position: 'JPEJJY,ZORWQV'}
 - type: Label
-  properties: {}
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'labels:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
   name: label_4
   layout_properties: {grid_position: 'SBWQDS,FLQAYK'}
+- type: CheckBox
+  properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
+    visible: true, text: '', font_size: null, font: '', spacing_above: small, spacing_below: small,
+    italic: false, background: '', bold: false, checked: false, underline: false}
+  name: check_box_1
+  layout_properties: {grid_position: 'SBWQDS,JVCWVN'}
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: 'label fontsize:', font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: true, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_5
+  layout_properties: {grid_position: 'OIPMVR,CLGNLF'}
 is_package: true
