--- a/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
+++ b/client_code/reports/widgets/chart_utilities/axis/form_template.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-  properties: {col_widths: '{"CJEDOA":15,"ZTZCHO":45,"QZMTHO":15,"JJOMGU":45,"XKIEJY":15,"ZORWQV":45,"FLQAYK":15,"JVCWVN":45}'}
+  properties: {col_widths: '{"CJEDOA":15,"ZTZCHO":45,"QZMTHO":15,"JJOMGU":45,"XKIEJY":15,"ZORWQV":45,"FLQAYK":15,"JVCWVN":45,"CLGNLF":15,"UIWTGE":45}'}
 components:
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
@@ -49,7 +49,7 @@ components:
 - type: CheckBox
   properties: {role: null, align: left, tooltip: '', border: '', enabled: true, foreground: '',
     visible: true, text: '', font_size: null, font: '', spacing_above: small, spacing_below: small,
-    italic: false, background: '', bold: false, checked: false, underline: false}
+    italic: false, background: '', bold: false, checked: true, underline: false}
   name: check_box_1
   layout_properties: {grid_position: 'SBWQDS,JVCWVN'}
   event_bindings: {}
@@ -64,4 +64,5 @@ components:
   properties: {}
   name: text_box_4
   layout_properties: {grid_position: 'OIPMVR,UIWTGE'}
+  event_bindings: {}
 is_package: true
