--- a/client_code/reports/widgets/chart_utilities/sort/form_template.yaml
+++ b/client_code/reports/widgets/chart_utilities/sort/form_template.yaml
@@ -1,5 +1,14 @@
 container:
   type: ColumnPanel
   event_bindings: {}
-components: []
+  properties: {col_widths: '{}'}
+components:
+- type: Label
+  properties: {}
+  name: label_1
+  layout_properties: {grid_position: 'PZZZTF,DHKMBP'}
+- type: Label
+  properties: {}
+  name: label_2
+  layout_properties: {grid_position: 'DAVJMZ,RZOIPH'}
 is_package: true
