--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -17,18 +17,70 @@ components:
   layout_properties:
     col_widths: {}
     grid_position: SMMSJS,GPUNUV
+- type: FileLoader
+  properties:
+    role: null
+    show_state: true
+    align: center
+    tooltip: ''
+    border: ''
+    file_types: null
+    enabled: true
+    files: []
+    foreground: ''
+    visible: true
+    text: Upload
+    font_size: 12
+    font: ''
+    spacing_above: small
+    icon_align: left
+    spacing_below: small
+    italic: false
+    file: null
+    background: ''
+    bold: false
+    underline: false
+    multiple: false
+    icon: fa:upload
+  name: file_loader
+  layout_properties: {grid_position: 'BEUTWQ,BERWQT'}
+  event_bindings: {change: upload_change}
 - type: ColumnPanel
-  properties: {}
+  properties: {col_widths: '{}'}
   name: column_panel
   layout_properties:
     col_widths: {}
     grid_position: CXZTDG,OICYDD
+  components: []
+  event_bindings: {}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_2
+  layout_properties: {grid_position: 'YUYTFM,HVEUEU'}
+  event_bindings: {}
+- type: ColumnPanel
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: false,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: small, background: ''}
+  name: column_panel_viz
+  layout_properties: {grid_position: 'WIAIVZ,HBFMUW'}
+  components:
+  - type: form:reports.widgets.chart_utilities.chart_display
+    properties: {}
+    name: chart_display
+    layout_properties: {grid_position: 'YJMZMD,GKMDGB', width: 149}
+  event_bindings: {}
 - type: Button
   properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
-    foreground: '', visible: true, text: print_spec, font_size: null, font: '', spacing_above: small,
+    foreground: '', visible: false, text: render, font_size: 12, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
     underline: false, icon: ''}
-  name: button_1
+  name: button_render
   layout_properties: {grid_position: 'XFYWFI,QRZKQX'}
-  event_bindings: {click: print_spec_click}
+  event_bindings: {click: render_spec_click}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_3
+  layout_properties: {grid_position: 'FFPXLJ,XHRGKF'}
+  event_bindings: {}
 is_package: true
