--- a/client_code/reports/widgets/toolbar/form_template.yaml
+++ b/client_code/reports/widgets/toolbar/form_template.yaml
@@ -41,7 +41,7 @@ components:
     event_bindings: {click: move_widget}
   - type: Link
     properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      visible: false, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
       italic: false, background: '', bold: false, underline: false, icon: 'fa:eye'}
     name: link_preview
