--- a/anvil.yaml
+++ b/anvil.yaml
@@ -43,7 +43,13 @@ native_deps: {head_html: "<script>\nfunction get_jQuery_obj(component) {\n    //
     \ = self\n      \tconst element = get_jQuery_obj(component);\n        element.trigger(event);\n\
     \    });\n}\n</script>\n\n<script src=\"https://cdn.jsdelivr.net/npm/vega@5.10.0\"\
     ></script>\n<script src=\"https://cdn.jsdelivr.net/npm/vega-lite@4.7.0\"></script>\n\
-    <script src=\"https://cdn.jsdelivr.net/npm/vega-embed@6.5.1\"></script>"}
+    <script src=\"https://cdn.jsdelivr.net/npm/vega-embed@6.5.1\"></script>\n\n<link\
+    \ href=\"https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.css\"\
+    \ rel=\"stylesheet\" type=\"text/css\">\n<script src=\"https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.min.js\"\
+    ></script>\n\n<script>\nfetch('https://vega.github.io/schema/vega-lite/v4.json')\n\
+    \  \t.then(function(resp){\n    \treturn resp.json();\n  \t})\n  \t.then(function(data)\
+    \ {\n        schema=data\n  \t\t//make_editor(spec, schema, comp, parent);\n \
+    \ });\n</script>"}
 db_schema:
 - name: forms
   id: 63199
