--- a/client_code/reports/main/form_template.yaml
+++ b/client_code/reports/main/form_template.yaml
@@ -21,17 +21,9 @@ components:
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
       italic: false, background: '', bold: false, underline: false, icon: 'fa:database'}
-    name: link_6
+    name: link_datasets
     layout_properties: {grid_position: 'ZCTXRA,KZTCGP'}
-  - type: Link
-    properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
-      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-      spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-      italic: false, background: '', bold: false, underline: false, icon: 'fa:download'}
-    name: link_4
-    layout_properties: {grid_position: 'AKGVRN,WQWKWW'}
-    event_bindings: {click: download_click}
-    components: []
+    event_bindings: {click: link_datasets_click}
   - type: Link
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
