--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -17,77 +17,14 @@ components:
   layout_properties:
     col_widths: {}
     grid_position: SMMSJS,GPUNUV
-- type: FileLoader
-  properties:
-    role: null
-    show_state: true
-    align: center
-    tooltip: ''
-    border: ''
-    file_types: null
-    enabled: true
-    files: []
-    foreground: ''
-    visible: true
-    text: Upload
-    font_size: 12
-    font: ''
-    spacing_above: small
-    icon_align: left
-    spacing_below: small
-    italic: false
-    file: null
-    background: ''
-    bold: false
-    underline: false
-    multiple: false
-    icon: fa:upload
-  name: file_loader
-  layout_properties: {grid_position: 'BEUTWQ,BERWQT'}
-  event_bindings: {change: upload_change}
 - type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: false,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-    spacing_below: small, background: ''}
-  name: column_panel_container
-  layout_properties: {grid_position: 'VWMJRV,AXCSSN'}
-  event_bindings: {}
-  components:
-  - type: ColumnPanel
-    properties: {col_widths: '{}'}
-    name: column_panel
-    layout_properties:
-      col_widths: {}
-      grid_position: KJYCEN,JRVXIC
-    components: []
-    event_bindings: {}
-  - type: ColumnPanel
-    properties: {role: null, tooltip: '', border: '', foreground: '', visible: false,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-      spacing_below: small, background: ''}
-    name: column_panel_vl_container
-    layout_properties: {grid_position: 'WRWTTX,XWIEBO'}
-    components:
-    - type: Spacer
-      properties: {height: 32}
-      name: spacer_3
-      layout_properties: {grid_position: 'CQEBDD,PJDIAR'}
-    - type: form:reports.widgets.chart_utilities.chart_display
-      properties: {}
-      name: chart_display
-      layout_properties: {grid_position: 'WHEWVN,FVGGQH', width: 149}
-    - type: Spacer
-      properties: {height: 32}
-      name: spacer_2
-      layout_properties: {grid_position: 'PJATAM,THESJR'}
-      event_bindings: {}
-    event_bindings: {}
-  - type: Button
-    properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
-      foreground: '', visible: true, text: render, font_size: 12, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: button_render
-    layout_properties: {grid_position: 'LQCPMH,VVCXEO'}
-    event_bindings: {click: render_spec_click}
+  properties: {role: expand_height, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
+    background: ''}
+  name: column_panel_json_container
+  layout_properties: {grid_position: 'AFLOZU,DPLVPA'}
+- type: ColumnPanel
+  properties: {}
+  name: column_panel_vis_container
+  layout_properties: {grid_position: 'AFLOZU,BIGZCP'}
 is_package: true
