--- a/client_code/reports/widgets/markdown/form_template.yaml
+++ b/client_code/reports/widgets/markdown/form_template.yaml
@@ -38,9 +38,9 @@ components:
   layout_properties: {grid_position: 'KHGTEQ,PTFKHA'}
   event_bindings: {}
   components:
-  - type: form:reports.widgets.html_display
+  - type: form:reports.widgets.widget_utilities.markdown_display
     properties: {}
-    name: html_display
+    name: markdown_display
     layout_properties: {grid_position: 'HTHYUL,FKEPUK'}
 - type: Button
   properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
