--- a/client_code/reports/main/form_template.yaml
+++ b/client_code/reports/main/form_template.yaml
@@ -42,19 +42,19 @@ components:
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-      italic: false, background: '', bold: false, underline: false, icon: 'fa:home'}
-    name: link_landing
-    layout_properties: {grid_position: 'WASXLK,ROOGGG'}
-    event_bindings: {click: link_landing_click}
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:share'}
+    name: link_share
+    layout_properties: {grid_position: 'SHMGEU,GZOTJE'}
+    event_bindings: {click: share_link_click}
     components: []
   - type: Link
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-      italic: false, background: '', bold: false, underline: false, icon: 'fa:share'}
-    name: link_5
-    layout_properties: {grid_position: 'SHMGEU,GZOTJE'}
-    event_bindings: {click: share_link_click}
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:home'}
+    name: link_landing
+    layout_properties: {grid_position: 'WASXLK,ROOGGG'}
+    event_bindings: {click: link_landing_click}
     components: []
   event_bindings: {}
 - type: ColumnPanel
@@ -86,22 +86,17 @@ components:
     name: link_2
     layout_properties: {grid_position: 'QWLHRO,XQSJWU'}
     event_bindings: {click: chart_widget_click}
-- type: LinearPanel
-  properties: {}
-  name: linear_panel_1
-  layout_properties: {slot: title}
-  components:
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: OpenQuestion, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_1
-    layout_properties: {slot: title, grid_position: 'IMCCNP,ESFQDJ'}
-    event_bindings: {}
 - type: ColumnPanel
   properties: {col_widths: '{}'}
   name: column_panel
   layout_properties: {slot: default}
   components: []
+  event_bindings: {}
+- type: TextBox
+  properties: {role: null, align: left, hide_text: false, tooltip: '', placeholder: title,
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 30,
+    font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+    background: '', bold: false, underline: false}
+  name: text_box_title
+  layout_properties: {slot: title}
   event_bindings: {}
