--- a/client_code/reports/widgets/markdown/form_template.yaml
+++ b/client_code/reports/widgets/markdown/form_template.yaml
@@ -28,8 +28,8 @@ components:
     auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_area_text
-  layout_properties: {grid_position: 'UEAIGJ,CFHLAE'}
-  event_bindings: {}
+  layout_properties: {grid_position: 'PFIWCY,MNLOYW'}
+  event_bindings: {focus: text_area_focus, lost_focus: text_area_lost_focus}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: false,
     wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
@@ -41,13 +41,5 @@ components:
   - type: form:reports.widgets.widget_utilities.markdown_display
     properties: {}
     name: markdown_display
-    layout_properties: {grid_position: 'HTHYUL,FKEPUK'}
-- type: Button
-  properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
-    foreground: '', visible: true, text: render, font_size: 14, font: '', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-    underline: false, icon: ''}
-  name: button_1
-  layout_properties: {grid_position: 'HMKHZI,SBKGQN'}
-  event_bindings: {click: render_click}
+    layout_properties: {grid_position: 'HRCZOL,TXCBQL'}
 is_package: true
