--- a/client_code/reports/widgets/widget_utilities/markdown_display/form_template.yaml
+++ b/client_code/reports/widgets/widget_utilities/markdown_display/form_template.yaml
@@ -1,6 +1,7 @@
 container:
   type: HtmlTemplate
-  properties: {html: "<center style=\"font-style:italic; color:#888; margin: 3em;\"\
+  properties: {tooltip: '', background: '', foreground: '', border: '', visible: true,
+    role: null, html: "<center style=\"font-style:italic; color:#888; margin: 3em;\"\
       >\n  (Insert your custom HTML here)\n</center>"}
   event_bindings: {}
 components: []
