--- a/anvil.yaml
+++ b/anvil.yaml
@@ -46,8 +46,10 @@ native_deps: {head_html: "<script>\nfunction get_jQuery_obj(component) {\n    //
     <script src=\"https://cdn.jsdelivr.net/npm/vega-embed@6.5.1\"></script>\n\n<link\
     \ href=\"https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.css\"\
     \ rel=\"stylesheet\" type=\"text/css\">\n<script src=\"https://cdnjs.cloudflare.com/ajax/libs/jsoneditor/9.0.3/jsoneditor.min.js\"\
-    ></script>\n\n<script>\nfetch('https://vega.github.io/schema/vega-lite/v4.json')\n\
-    \  \t.then(function(resp){\n    \treturn resp.json();\n  \t})\n  \t.then(function(data)\
+    ></script>\n\n<script>\nvar opts={\"renderer\": \"svg\", \"mode\": \"vega-lite\"\
+    , \"actions\": {\"export\": true, \"source\": false, \"editor\": false, \"compiled\"\
+    : false}}  \n  \nfetch('https://vega.github.io/schema/vega-lite/v4.json')\n  \t\
+    .then(function(resp){\n    \treturn resp.json();\n  \t})\n  \t.then(function(data)\
     \ {\n        schema=data\n  \t\t//make_editor(spec, schema, comp, parent);\n \
     \ });\n</script>"}
 db_schema:
