--- a/client_code/reports/widgets/markdown/form_template.yaml
+++ b/client_code/reports/widgets/markdown/form_template.yaml
@@ -25,7 +25,7 @@ components:
 - type: TextArea
   properties: {role: null, align: left, height: '', tooltip: '', placeholder: markdown here,
     border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
-    auto_expand: false, font: '', spacing_above: small, spacing_below: small, italic: false,
+    auto_expand: true, font: '', spacing_above: small, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: text_area_text
   layout_properties: {grid_position: 'PFIWCY,MNLOYW'}
