--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -33,8 +33,8 @@ roles:
 - {name: section_shadow}
 - {name: no_drag}
 - {name: thinrow}
-- {name: expand_height}
-- {name: raise_file_loader_icon}
+- {name: json_editor}
+- {name: vega-lite}
 color_scheme:
   preset_groups:
   - name: Primary Colour
