--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -18,13 +18,15 @@ components:
     col_widths: {}
     grid_position: SMMSJS,GPUNUV
 - type: ColumnPanel
-  properties: {role: expand_height, tooltip: '', border: '', foreground: '', visible: true,
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
     background: ''}
   name: column_panel_json_container
   layout_properties: {grid_position: 'AFLOZU,DPLVPA'}
 - type: ColumnPanel
-  properties: {}
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
+    background: ''}
   name: column_panel_vis_container
   layout_properties: {grid_position: 'AFLOZU,BIGZCP'}
 is_package: true
