--- a/client_code/reports/widgets/chart/form_template.yaml
+++ b/client_code/reports/widgets/chart/form_template.yaml
@@ -18,15 +18,25 @@ components:
     col_widths: {}
     grid_position: SMMSJS,GPUNUV
 - type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
-    background: ''}
-  name: column_panel_json_container
-  layout_properties: {grid_position: 'AFLOZU,DPLVPA'}
-- type: ColumnPanel
-  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '', spacing_below: small,
-    background: ''}
-  name: column_panel_vis_container
-  layout_properties: {grid_position: 'AFLOZU,BIGZCP'}
+  properties: {role: null, tooltip: '', border: '', foreground: 'theme:White', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: small, background: 'theme:White'}
+  name: column_panel_outer_container
+  layout_properties: {grid_position: 'XVDYNZ,BTKJHC'}
+  components:
+  - type: ColumnPanel
+    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: column_panel_json_container
+    layout_properties: {grid_position: 'ZQIIUP,SVTMJZ'}
+    components: []
+  - type: ColumnPanel
+    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: column_panel_vis_container
+    layout_properties: {grid_position: 'ZQIIUP,LZPZRM'}
+    components: []
+  event_bindings: {}
 is_package: true
