--- a/client_code/reports/widgets/widget_utilities/json/form_template.yaml
+++ b/client_code/reports/widgets/widget_utilities/json/form_template.yaml
@@ -20,10 +20,12 @@ container:
       \  \t.then(function(resp){\n    \treturn resp.json();\n  \t})\n  \t.then(function(data)\
       \ {\n        schema=data\n  \t\tmake_editor(spec, schema, comp, parent);\n \
       \ });\n\n\n};\n*/\n</script>\n  \n</body>\n<head>\n<style type=\"text/css\"\
-      >\n  \n  .jsoneditor {\n    height: 400px;\n  }\n  \n  .jsoneditor-menu {\n\
-      \  background-color: white;\n}\n  \n  .jsoneditor-menu > button.jsoneditor-transform\
-      \ {\n  color: black;\n  background-color: black; \n}\n  \n\n  \n  \n</style>\n\
-      </head>"}
+      >\n  \n  .jsoneditor {\n    height: 400px;\n    border: 0;\n  }\n  \n  .jsoneditor-menu\
+      \ {\n  background-color: gray;\n  border: 0;\n}\n  \n .ace-jsoneditor .ace_gutter-active-line\
+      \ {\n\tbackground-color: white\n}\n  \n.ace-jsoneditor .ace_gutter {\n  background:\
+      \ white\n  }\n  \n.jsoneditor-statusbar {\n  visibility: hidden;\n  }\n  \n\
+      \  /*\n  \n  .jsoneditor-menu > button.jsoneditor-transform {\n  color: black;\n\
+      \  background-color: black; \n \n}\n  */\n  \n\n  \n  \n</style>\n</head>"}
   event_bindings: {show: form_show}
 components: []
 is_package: true
