--- a/anvil.yaml
+++ b/anvil.yaml
@@ -79,4 +79,34 @@ db_schema:
       admin_ui: {order: 4, width: 200}
   access: {python_name: forms, app_id: RZCX3HWGWWPZJCOH, server: full, client: none,
     table_id: 63199}
+- name: reports
+  id: 69868
+  python_name: reports
+  columns:
+    H4Ig033eN_4=:
+      name: schema
+      type: simpleObject
+      admin_ui: {order: 3, width: 200}
+    O8EjvmT0_qU=:
+      name: report_id
+      type: string
+      admin_ui: {order: -1, width: 200}
+    TapnSmBFcrU=:
+      name: last_modified
+      type: datetime
+      admin_ui: {order: 2, width: 200}
+    hobmNYbScBQ=:
+      name: title
+      type: string
+      admin_ui: {order: 0, width: 200}
+    i0yr7vB_5ZA=:
+      name: datasets
+      type: simpleObject
+      admin_ui: {order: 5, width: 200}
+    j6KT9QDxLj8=:
+      name: charts
+      type: simpleObject
+      admin_ui: {order: 4, width: 200}
+  access: {python_name: reports, app_id: RZCX3HWGWWPZJCOH, server: full, client: none,
+    table_id: 69868}
 renamed: true
