--- a/client_code/landing/select_action/survey_row/form_template.yaml
+++ b/client_code/landing/select_action/survey_row/form_template.yaml
@@ -9,7 +9,7 @@ components:
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_build
   layout_properties: {column: HMTFLI}
-  event_bindings: {click: link_build_click}
+  event_bindings: {click: link_build_form_click}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
     visible: true, text: data, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
