--- a/client_code/landing/select_action/report_row/form_template.yaml
+++ b/client_code/landing/select_action/report_row/form_template.yaml
@@ -17,9 +17,10 @@ components:
   event_bindings: {click: link_build_report_click}
 - type: Link
   properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-    visible: true, text: share, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+    visible: true, text: download, font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
     spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_2
   layout_properties: {column: SSDLKJ}
+  event_bindings: {}
 is_package: true
