--- a/client_code/reports/main/form_template.yaml
+++ b/client_code/reports/main/form_template.yaml
@@ -10,42 +10,22 @@ components:
   name: navbar_links
   layout_properties: {slot: nav-right}
   components:
-  - type: FileLoader
-    properties:
-      role: null
-      show_state: false
-      align: center
-      tooltip: ''
-      border: ''
-      file_types: null
-      enabled: true
-      files: []
-      foreground: theme:White
-      visible: true
-      text: '0'
-      font_size: 20
-      font: ''
-      spacing_above: small
-      icon_align: left
-      spacing_below: small
-      italic: false
-      file: null
-      background: ''
-      bold: false
-      underline: false
-      multiple: true
-      icon: fa:database
-    name: file_loader
-    layout_properties: {grid_position: 'DSAVHY,CKOUPH'}
-    event_bindings: {change: file_loader_change}
+  - type: Link
+    properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
+      visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+      spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:database'}
+    name: link_datasets
+    layout_properties: {}
+    event_bindings: {click: link_datasets_click}
   - type: Link
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
       visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
       spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-      italic: false, background: '', bold: false, underline: false, icon: 'fa:share'}
-    name: link_share
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:download'}
+    name: link_download
     layout_properties: {grid_position: 'SHMGEU,GZOTJE'}
-    event_bindings: {click: share_link_click}
+    event_bindings: {click: link_download_click}
     components: []
   - type: Link
     properties: {role: null, url: '', align: center, tooltip: '', border: '', foreground: '',
